fix(index): more spacing to breath a bit

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,7 @@
 
   --font-stack: helvetica, arial, sans-serif;
 
-  --breakpoint: 45em;
+  --breakpoint: 55em;
 }
 
 html {
@@ -263,6 +263,10 @@ pre code {
   border: 0;
 }
 
+.top_margin {
+  padding-top: 3em;
+}
+
 .button {
   background: var(--med-grey);
   border-radius: 3px;
@@ -335,7 +339,7 @@ pre code {
 
   .columns.three > article {
     flex: 0 1 33%;
-    margin-right: 1%;
+    margin-right: 3%;
   }
 
   .columns.three > article:last-child {
